@startuml
'https://plantuml.com/class-diagram

interface Observer {
    notify()
}

interface OrderConfirmationService {
    sendOrderConfirmation(Cart)
}

class OrderConfirmationServiceNotifier
Observer <|-- OrderConfirmationServiceNotifier
OrderConfirmationServiceNotifier *-- OrderConfirmationService

class DummyOrderConfirmationService

OrderConfirmationService <|.. DummyOrderConfirmationService
OrderConfirmationService <|.. OrderConfirmationServiceAdapter

@enduml